# apps/server/src/infra/http/presenters/producer.presenter.ts
@@ -1,4 +1,5 @@
 import { PaginatedResult } from '@core/dto/paginated-result';
+import { ListProducersDto } from '@modules/producers/application/dto/list-producers.dto';
 import { Producer } from '@modules/producers/domain/entities/producer';
 import { createZodDto } from 'nestjs-zod';
 import z from 'zod';
@@ -11,7 +12,7 @@ const schema = z.object({
 });
 
 const PaginatedSchema = z.object({
-  items: z.array(schema),
+  items: z.array(schema.and(z.object({ farmsCount: z.number() }))),
   total: z.number(),
 });
 
@@ -31,10 +32,16 @@ export class ProducerPresenter {
     });
   }
 
-  static toPaginatedHTTP(producers: PaginatedResult<Producer>) {
+  static toPaginatedHTTP(producers: PaginatedResult<ListProducersDto>) {
     return PaginatedSchema.parse({
-      items: producers.items.map(this.toHTTP),
       total: producers.total,
+      items: producers.items.map(({ producer, farmsCount }) => ({
+        id: producer.id.toString(),
+        name: producer.name,
+        document: producer.document.value,
+        createdAt: producer.createdAt.toISOString(),
+        farmsCount,
+      })),
     });
   }
 }
