# apps/server/src/modules/producers/domain/repositories/producers.repository.ts
@@ -1,5 +1,6 @@
 import { Producer } from '@modules/producers/domain/entities/producer';
 import { PaginatedResult } from '@core/dto/paginated-result';
+import { ListProducersDto } from '@modules/producers/application/dto/list-producers.dto';
 
 export interface FindManyProducersParams {
   name?: string;
@@ -8,10 +9,12 @@ export interface FindManyProducersParams {
   perPage: number;
 }
 
+export type FindManyProducersResult = PaginatedResult<ListProducersDto>;
+
 export abstract class ProducersRepository {
   abstract findById(id: string): Promise<Producer | null>;
   abstract findByDocument(document: string): Promise<Producer | null>;
-  abstract findMany(params: FindManyProducersParams): Promise<PaginatedResult<Producer>>;
+  abstract findMany(params: FindManyProducersParams): Promise<FindManyProducersResult>;
   abstract save(producer: Producer): Promise<Producer>;
   abstract deleteById(id: string): Promise<void>;
 }
